syntax = "proto3";

package pix_ledger;

option go_package = "./;pb";

message PixRequest {
   string key = 1;
}

message PixCreateKeyRequest {
   string key = 1;
   string user_id = 2;
   string kind = 3;
}

message PixKeyResponse {
   string key = 1;
   string user_id = 2;
   bool active = 3;
   bool exists = 4;
}

message PixCreateKeyResponse {
   string key = 1;
}


service PixService {
   rpc FindKey (PixRequest) returns (PixKeyResponse);
   rpc CreateKey (PixCreateKeyRequest) returns (PixCreateKeyResponse);
}
